--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -23,8 +23,8 @@ li.name {
   position: relative;
   font-family: arial;
   background-color:rgba(0, 0, 0, 0.447);
-  /* opacity: 100%; */
   color: white;
+  z-index: 0;
 }
 
 .playerInfo {
@@ -41,10 +41,10 @@ li.name {
   width:80%;
   table-layout: fixed;
   font-size: 15px;
-  /* border-top: none;
-  border-bottom: none; */
+  border-top: none;
+  border-bottom: none; 
   text-align: center;
-  /* justify-content:left; */
+  justify-content:left; 
 }
 
 .articleContainer {
@@ -52,7 +52,6 @@ li.name {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   width:100px;
 }
 
@@ -62,15 +61,13 @@ a.news-link {
 }
 
 .cat, .stat {
-  display:table-cell;
+  vertical-align: middle;
+  justify-content: center;
   border: 1px solid white;
-  text-align: center;
 }
 
 .categoryLabel {
   background-color: grey;
-  justify-content:space-evenly;
-
 }
 
 .firstCol {
@@ -80,5 +77,3 @@ a.news-link {
 .news-link {
   text-decoration: none !important;
 }
-
-
